# game_service_system

./: README.md  text
base_lib/: CCfg.cpp  CCfg.h  CCond.h  CMD5.h  CMemManager.cpp  CMemPool.h  CMessageQueue.h  CMultiW_SingleR_Queue.cpp  CMultiW_SingleR_Queue.h  CMutex.h  CProcess.cpp  CRefObj.h  CShm.cpp  CShm.h  CSingleW_SingleR_Buffer.cpp  CTimer.h  CUUId.cpp  CUUId.h  ErrorCode.h  Function.cpp  MacroDefine.h  readme
cattles_game/: BaseDefine.h  CCattles.cpp  CCattles.h  CGameLogicHandler.cpp  CGameLogicHandler.h  CGameProcess.cpp  CGameProcess.h  Makefile  _NCattlesConfigData_.h  gen_protocol_code.sh  gen_xml_code.sh
common/: readme
dbproxy_common/: BaseDefine.h  CChessHallOperation.cpp  CChessHallOperation.h  CDBProxy.cpp  CDBProxy.h  CDBProxyCommonSrvFrame.cpp  CDBProxyCommonSrvFrame.h  CDataCache.cpp  CDataCache.h  CFFChessLogicHandler.cpp  CFFChessLogicHandler.h  CGameRecord.cpp  CGameRecord.h  CIP2City.cpp  CIP2City.h  CLogic.cpp  CLogic.h  CLogicData.cpp  CLogicData.h  CLogicHandler.cpp  CLogicHandler.h  CLogicHandlerThree.cpp  CLogicHandlerThree.h  CLogicHandlerTwo.cpp  CLogicHandlerTwo.h  CMsgHandler.cpp  Makefile  (+12 more)
frame/SrvMsgComm/: CMakeLists.txt  CNetMsgHandler.cpp  CNetMsgHandler.h  CSrvMsgComm.cpp  CSrvMsgComm.h  Makefile  readme
gateway_proxy/: CGatewayProxy.cpp  CGatewayProxy.h  CMakeLists.txt  Makefile  TypeDefine.h  _GatewayProxyConfig_.h  _NGatewayProxyConfig_.h  gen_xml_code.sh  readme
http_base/: CHttpConnectMgr.cpp  CHttpConnectMgr.h  CHttpData.cpp  CHttpData.h  CHttpSrv.cpp  CHttpSrv.h  CMakeLists.txt  HttpBaseDefine.h  Makefile
(+292 files in other folders)
